--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="button_blue">#FF35B6FE</color>
+    <color name="button_yellow">#FFFFDE59</color>
+    <color name="card_pink">#33E36B6B</color>
+
 </resources>
