--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -10,8 +10,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Login.ui.LoginActivity"
-        android:background="@drawable/signin_img_back">
+        tools:context=".SignUp.ui.SignUp"
+        android:background="@drawable/signup_background_img">
 
         <TextView
             android:id="@+id/welcomeTV"
@@ -24,7 +24,7 @@
             app:layout_constraintTop_toTopOf="parent"
             android:textSize="20sp"
             android:layout_marginTop="40dp"
-            android:layout_marginStart="40dp"/>
+            android:layout_marginStart="10dp"/>
 
         <TextView
             android:id="@+id/textView"
@@ -45,7 +45,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="30dp"
             android:fontFamily="@font/averia_serif_libre_light"
-            android:text="Sign in"
+            android:text="Sign up"
             android:textColor="@color/black"
             android:textSize="40sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -62,58 +62,75 @@
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/password"
+            android:background="@drawable/edit_text_back"
+            android:paddingHorizontal="10dp"
+            android:hint="Username"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        <EditText
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:textColorHint="@color/black"
+            android:textColor="@color/black"
+            android:layout_marginTop="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             android:background="@drawable/edit_text_back"
             android:paddingHorizontal="10dp"
             android:hint="Email"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
+            android:inputType="textEmailAddress"
+            app:layout_constraintTop_toBottomOf="@+id/username" />
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:background="@drawable/edit_text_back"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:paddingHorizontal="10dp"
             android:textColor="@color/black"
             android:textColorHint="@color/black"
+            android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/username"
-            app:layout_constraintBottom_toTopOf="@id/signInBtn"/>
-
+            android:background="@drawable/edit_text_back"
+            android:paddingHorizontal="10dp"
+            android:hint="Password"
+            android:inputType="textPassword"
+            app:layout_constraintTop_toBottomOf="@+id/email" />
+        <EditText
+            android:id="@+id/reEnterPassword"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:background="@drawable/edit_text_back"
+            android:paddingHorizontal="10dp"
+            android:hint="Re-enter your password"
+            android:inputType="textVisiblePassword"
+            app:layout_constraintTop_toBottomOf="@+id/password" />
         <TextView
-            android:id="@+id/signInBtn"
+            android:id="@+id/signUpBtn"
             android:layout_width="300dp"
             android:layout_height="70dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:background="@drawable/button_back"
-            android:fontFamily="@font/averia_serif_libre_light"
-            android:gravity="center"
-            android:paddingHorizontal="10dp"
-            android:text="Sign in"
-            android:textColor="@color/white"
-            android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/password" />
-        <TextView
-            android:id="@+id/forgotPasswordBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/averia_serif_libre_light"
+            android:background="@drawable/button_back"
             android:paddingHorizontal="10dp"
-            android:text="Forgot Password?"
-            android:textColor="@color/blue"
-            android:textSize="20sp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/password" />
+            android:text="Sign up"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            android:fontFamily="@font/averia_serif_libre_light"
+            android:gravity="center"
+            app:layout_constraintTop_toBottomOf="@+id/reEnterPassword" />
         <TextView
             android:id="@+id/signUpTV"
             android:layout_width="wrap_content"
@@ -123,20 +140,19 @@
             android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:text="New Here?"
+            android:text="Already have an account?"
             android:textSize="18sp"
             android:textColor="@color/black"
             android:fontFamily="@font/averia_serif_libre_light"
             android:gravity="center"
-            app:layout_constraintTop_toBottomOf="@+id/signInBtn" />
+            app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />
         <TextView
-            android:id="@+id/signUpBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:paddingHorizontal="10dp"
-            android:text="Sign Up"
+            android:text="Sign in"
             android:textColor="@color/blue"
             android:textSize="18sp"
             android:fontFamily="@font/averia_serif_libre_light"
