--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -147,6 +147,7 @@
             android:gravity="center"
             app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />
         <TextView
+            android:id="@+id/signInBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
