--- a/app/src/main/res/drawable/edit_text_back.xml
+++ b/app/src/main/res/drawable/edit_text_back.xml
@@ -2,6 +2,6 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android" >
     <corners android:radius="10dp"/>
-    <solid android:color="#ffffff"/>
-    <stroke android:color="@color/blue" android:width="2dp"/>
+    <solid android:color="@color/bright_gray"/>
+
 </shape>
