--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="gray">#FF808080</color>
+    <color name="bright_gray">#FFebecf0</color>
     <color name="blue">#18ACFE</color>
     <color name="white">#FFFFFFFF</color>
     <color name="button_blue">#FF35B6FE</color>
