--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,14 +8,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".SignUp.ui.SignUp"
-    android:background="@color/white"
+    android:background="@drawable/gradient_background"
     android:orientation="vertical"
 
     android:padding="25dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="40dp"
 
@@ -69,9 +68,28 @@ android:textSize="14sp"
         android:shadowDy="2"
         android:shadowRadius="4"
         android:hint="Username" />
+        <EditText
+            android:id="@+id/edt_email"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:textSize="14sp"
+            android:shadowColor="#A8A8A8"
+            android:shadowDx="3"
+            android:shadowDy="2"
+            android:shadowRadius="4"
+            android:layout_gravity="center"
+
+            android:layout_marginTop="20dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/gray"
+
+            android:background="@drawable/edit_text_back"
+            android:paddingHorizontal="10dp"
+            android:hint="Email"
+            android:inputType="textEmailAddress" />
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/edt_password"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:textSize="14sp"
@@ -90,6 +108,26 @@ android:textSize="14sp"
         android:paddingHorizontal="10dp"
         android:hint="Password"
         android:inputType="textPassword" />
+        <EditText
+            android:id="@+id/edt_repassword"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:textSize="14sp"
+            android:shadowColor="#A8A8A8"
+            android:shadowDx="3"
+            android:shadowDy="2"
+            android:shadowRadius="4"
+            android:layout_gravity="center"
+            android:drawableRight="@drawable/hide"
+
+            android:layout_marginTop="20dp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/gray"
+
+            android:background="@drawable/edit_text_back"
+            android:paddingHorizontal="10dp"
+            android:hint="Re-enter Password"
+            android:inputType="textPassword" />
     <TextView
         android:id="@+id/signUpBtn"
         android:layout_width="match_parent"
@@ -111,7 +149,6 @@ android:textSize="14sp"
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
         android:layout_marginTop="40dp"
         android:layout_marginBottom="40dp"
         android:layout_centerInParent="true"
@@ -143,15 +180,6 @@ android:textSize="14sp"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
 
-    <ImageView
-        android:layout_gravity="center"
 
-        android:id="@+id/img_volleyball"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/volleyball"
-        android:gravity="bottom"
-
-        />
     </LinearLayout>
 </layout>
