--- a/app/src/main/res/layout/activity_org_roomcreate.xml
+++ b/app/src/main/res/layout/activity_org_roomcreate.xml
@@ -8,13 +8,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".Organizer.ui.Home"
-    android:background="@drawable/gradient_background"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-android:background="@color/transparent_blue"
+android:background="@color/blue"
         android:orientation="vertical">
 
                 <ImageView
@@ -30,191 +30,159 @@ android:background="@color/transparent_blue"
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="40dp"
+        android:layout_height="fill_parent"
+        android:background="@color/transparent_blue"
+
         android:padding="25dp"
         android:orientation="vertical">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
-        android:background="@drawable/card_home_back"
-        android:orientation="vertical">
-            <TextView
-                android:id="@+id/txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-            android:layout_gravity="center"
-                android:text="O n g o i n g   M a t c h"
-                android:textColor="@color/white"
-                android:layout_margin="15dp"
-                android:textSize="24sp" />
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/txt1"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Team 1"
-                android:textColor="@color/white"
-                android:layout_margin="5dp"
-                android:textSize="18sp" />
-            <TextView
-                android:id="@+id/txt2"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Team 2"
-                android:textColor="@color/white"
-                android:layout_margin="5dp"
-                android:textSize="18sp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+        <TextView
 
-            android:orientation="horizontal">
-            <TextView
-
-                android:id="@+id/txt3"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="5"
-                android:textColor="@color/white"
-                android:layout_margin="5dp"
-                android:textSize="50sp" />
-            <TextView
-                android:id="@+id/txt4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="vs"
-                android:textColor="@color/white"
-                android:layout_margin="5dp"
-                android:textSize="40sp" />
-            <TextView
-                android:id="@+id/txt5"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="5"
-                android:textColor="@color/white"
-                android:layout_margin="5dp"
-                android:textSize="50sp" />
-        </LinearLayout>
-        <View android:layout_width="wrap_content"
-            android:layout_height="30dp"
-             />
-    </LinearLayout>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:padding="10dp"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:background="@drawable/white_unfilled_rounded"
+            android:textFontWeight="800"
+            android:text="C r e a t e   y o u r   R o o m" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="40dp"
-            android:background="@drawable/rounded_button_yellow"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="10dp"
+android:background="@drawable/white_unfilled_rounded"
+            android:padding="10dp"
             android:orientation="vertical">
-            <TextView
-
-                android:id="@+id/t"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Upcoming Events"
-                android:textColor="@color/black"
-                android:layout_margin="10dp"
-                android:textSize="18sp" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-android:padding="10dp"
-                android:background="@color/blue"
-                android:orientation="vertical">
+                android:padding="5dp"
+                android:orientation="horizontal">
                 <TextView
-                    android:layout_weight="1"
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="24th March,2023"
+                    android:textSize="16sp"
+                    android:padding="10dp"
+                    android:gravity="center"
                     android:textColor="@color/white"
-                    android:layout_margin="5dp"
-                    android:textSize="18sp" />
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                                    android:background="@color/blue"
-                    android:orientation="horizontal">
-                            <ImageView
-                                android:layout_gravity="center"
-
-                                android:id="@+id/img_volleyball12"
-                                android:layout_width="20dp"
-                                android:layout_height="70dp"
-                                android:src="@drawable/logo"
-                                android:gravity="bottom"
-                                android:layout_weight="1"
-
-                                />
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@color/blue"
-                    android:orientation="vertical">
+                    android:textFontWeight="800"
+                    android:text="Room code" />
                 <TextView
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="Team 1"
-                    android:textColor="@color/white"
-                    android:layout_margin="5dp"
-                    android:textSize="18sp" />
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="Tvs"
-                    android:textColor="@color/white"
-                    android:layout_margin="5dp"
-                    android:textSize="18sp" />
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="Team 2"
-                    android:textColor="@color/white"
-                    android:layout_margin="5dp"
-                    android:textSize="18sp" />
-                </LinearLayout>
-                    <ImageView
-                        android:layout_gravity="center"
 
-                        android:id="@+id/img_volleyball13"
-                        android:layout_width="20dp"
-                        android:layout_height="70dp"
-                        android:src="@drawable/logo"
-                        android:gravity="bottom"
-                        android:layout_weight="1"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:padding="12dp"
+                    android:background="@drawable/white_unfilled_rectangle"
 
-                        />
-                </LinearLayout>
+                    android:gravity="center"
+                    android:textColor="@color/white"
+                    android:text="5 4 3 2" />
+              </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/white_unfilled_rounded"
+                android:padding="5dp"
+                android:orientation="horizontal">
+            <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:padding="10dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:textFontWeight="800"
+                android:text="Share this code" />
+                <ImageView
+                    android:layout_gravity="center"
+
+                    android:id="@+id/img_share"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:padding="5dp"
+
+                    android:src="@drawable/share"
+
+                    />
+                <ImageView
+                    android:layout_gravity="center"
+
+                    android:id="@+id/img_whatsapp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:padding="5dp"
+                    android:src="@drawable/whatsapp"
+
+                    />
             </LinearLayout>
         </LinearLayout>
 
+        <ImageView
+                android:layout_gravity="center"
 
+                android:id="@+id/img_team1"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/logo"
+
+                />
+            <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:paddingLeft="40dp"
+                android:paddingRight="40dp"
+                android:background="@drawable/white_unfilled_rectangle"
+android:layout_gravity="center"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:text="Team 1" />
+            <ImageView
+                android:layout_gravity="center"
+
+                android:id="@+id/img_team2"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/logo"
+
+                />
+            <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:paddingLeft="40dp"
+                android:paddingRight="40dp"
+                android:background="@drawable/white_unfilled_rectangle"
+                android:layout_gravity="center"
+
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:text="Team 2" />
+            <TextView
+                android:id="@+id/createBtn"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center"
+
+                android:background="@drawable/button_back"
+                android:paddingHorizontal="10dp"
+                android:text="Create"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:gravity="center" />
     </LinearLayout>
 
     </LinearLayout>
