--- a/app/src/main/res/layout/activity_room_dashboard.xml
+++ b/app/src/main/res/layout/activity_room_dashboard.xml
@@ -19,12 +19,17 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
 
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
             android:background="@color/white"
             android:orientation="horizontal"
             android:paddingLeft="20dp"
+            android:paddingRight="20dp"
             android:paddingTop="20dp"
             android:paddingBottom="20dp">
 
@@ -83,9 +88,9 @@
 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_margin="20dp"
                     android:background="@color/button_yellow"
-                    android:layout_gravity="center"
                     android:padding="5dp"
                     android:text="10"
                     android:textColor="@color/black"
@@ -175,9 +180,9 @@
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
                         android:layout_margin="20dp"
                         android:background="@color/button_yellow"
-                        android:layout_gravity="center"
                         android:padding="5dp"
                         android:text="10"
                         android:textColor="@color/black"
@@ -187,9 +192,9 @@
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
                         android:layout_margin="20dp"
                         android:background="@color/button_yellow"
-                        android:layout_gravity="center"
                         android:padding="5dp"
                         android:text="10"
                         android:textColor="@color/black"
@@ -250,9 +255,9 @@
 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_margin="20dp"
                     android:background="@color/button_yellow"
-                    android:layout_gravity="center"
                     android:padding="5dp"
                     android:text="10"
                     android:textColor="@color/black"
