--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,7 +51,7 @@
             android:textColor="@color/black"
             android:textSize="32sp" />
         <EditText
-            android:id="@+id/edt_username"
+            android:id="@+id/edt_email"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:textSize="14sp"
@@ -63,7 +63,7 @@
             android:background="@drawable/edit_text_back"
             android:paddingHorizontal="10dp"
 
-            android:hint="Username" />
+            android:hint="Email" />
         <EditText
             android:id="@+id/edt_password"
             android:layout_width="match_parent"
