--- a/app/src/main/res/layout/activity_room_dashboard.xml
+++ b/app/src/main/res/layout/activity_room_dashboard.xml
@@ -11,7 +11,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="@color/blue"
-        tools:context=".Room.ui.Dashboard">
+        tools:context=".Team.ui.Dashboard">
 
 
         <LinearLayout
