--- a/app/src/main/res/layout/activity_team_main.xml
+++ b/app/src/main/res/layout/activity_team_main.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".TeamMainActivity">
 
         <fragment
             android:id="@+id/fragment_container"
@@ -21,7 +21,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
-            app:navGraph="@navigation/mobile_navigation"/>
+            app:navGraph="@navigation/team_mobile_navigation"/>
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
@@ -30,7 +30,7 @@
             android:layout_gravity="bottom"
             android:background="@color/blue"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:menu="@menu/nav_bar_menu" />
+            app:menu="@menu/team_nav_bar_menu" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
