--- a/app/src/main/res/layout/fragment_organizer_home.xml
+++ b/app/src/main/res/layout/fragment_organizer_home.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"
         android:background="@drawable/home_page_back"
         android:orientation="vertical"
-        tools:context=".Organizer.ui.OrganizerHomeFragment">
+        tools:context=".Organizer.ui.TeamHomeFragment">
 
         <LinearLayout
             android:layout_width="match_parent"
