--- a/app/src/main/res/layout/fragment_org_profile.xml
+++ b/app/src/main/res/layout/fragment_org_profile.xml
@@ -7,9 +7,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Organizer.ui.Dashboard"
+        tools:context=".Organizer.ui.OrganizerProfileFragment"
     android:background="@color/white"
-    android:orientation="vertical">
+    android:orientation="vertical"
+       >
 
     <LinearLayout
         android:layout_width="match_parent"
