--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,7 +18,7 @@
 
     <fragment
         android:id="@+id/navigation_profile"
-        android:name="com.example.vscore.Organizer.ui.OrganizerHomeFragment"
+        android:name="com.example.vscore.Organizer.ui.OrganizerProfileFragment"
         android:label="profile"
-        tools:layout="@layout/fragment_organizer_home" />
+        tools:layout="@layout/fragment_org_profile" />
 </navigation>
